--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -61,7 +61,7 @@
     <string name="missing_pictures">Ontbrekende foto\'s</string>
     <string name="pick_contact">Kies een contact</string>
     <string name="pixel_matrix">Pixel Matrix</string>
-    <string name="settings">Upgrade</string>
+    <string name="settings">Instellingen</string>
     <string name="shrinking_plates">Schoteltjes</string>
     <string name="store_images">
         Dit bewaart afbeeldingen van uw contacten in de Micopi Media Directory* op uw apparaat.
